--- a/ant_farm/index.html
+++ b/ant_farm/index.html
@@ -30,10 +30,10 @@
 <img src="map.png" alt="map" width="400px">
 
 
-<p>Cells are either empty of full (the light gray cells in the figure illustrate the optimal path, but are as empty as
+<p>Cells are either empty or full (the light gray cells in the figure illustrate the optimal path, but are as empty as
     blank ones). The ant starts in the cell marked <em>Start</em>, facing right ("east"). Thereafter it is always in a
     cell and facing in one of the four possible directions. At the beginning of each step it gets one bit of sensory
-    information: whether there is food in the cell in front of the cell it curerntly occupies (i.e., the cell it would
+    information: whether there is food in the cell in front of the cell it currently occupies (i.e., the cell it would
     move to if it moved forward). At each time-step it has one of the four possible actions. It can (<b>F</b>) move
     forward one cell; (<b>R</b>) turn right ninety degrees without changing cells; (<b>L</b>) turn left ninety degrees
     without changing cells; or (<b>N</b>) do nothing. If an ant moves onto a food-cell, it consumes the food and the
